# cppUtils

./: CMakeLists.txt
src/: CMakeLists.txt
src/type_traits/: CMakeLists.txt  apply.hpp  invocable.hpp  sequence.hpp  tuple.hpp
tests/: CMakeLists.txt  applyTests.cpp  invocableTests.cpp  sequenceTests.cpp  tupleTests.cpp
